Fix header
Header was having layout issues so minor changes were made to the html and css file for it to look properly.

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  padding: 8px;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .profile-image {
@@ -44,5 +48,13 @@ a {
 }
 
 ul {
+  padding: 0;
+  margin: 0;
   list-style-type: none;
+}
+
+.left-header, .right-header, .links {
+  display: flex;
+  gap: 16px;
+  align-items: center;
 }
